welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: not found: value tab
                                                          for (i<- tab){
                                                                   ^indexOfValue:3: error: not found: value tab
                                                            if (tab[i]==lookigFor){
                                                                ^indexOfValue:3: error: not found: type i
                                                            if (tab[i]==lookigFor){
                                                                    ^indexOfValue:3: error: not found: value lookigFor
                                                            if (tab[i]==lookigFor){
                                                                        ^